# qutty

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py
src/qutty/: __init__.py  __main__.py
