[metadata]
name = QuTTY
version = 1.1.0
description = QuTTY, a minimal GUI app to test pup.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/tmontes/qutty
keywords = gui, applications
author = Tiago Montes
author_email = tiago.montes@gmail.com
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    importlib-metadata==4.11.4
    importlib-resources==5.7.1
    PyQt5==5.15.6
    PyQt5-Qt5==5.15.2
    PyQt5-sip==12.10.1
    zipp==3.8.0

[options.packages.find]
where = src

[options.package_data]
* =
    *.png

[options.entry_points]
console_scripts =
    qutty = qutty.__main__:main
